-
Bug
-
Resolution: Done
-
P4: Low
-
5.2.1
-
None
-
wince 6,7,8
-
9a14731b7cc95c18aad419ad7b8696a2f4ec39c9.(stable, 1.4.2014, 5.3)
when i try to start a pprogram which needs freetype fontredering i get this message:
GetGlyphOutline not supported under Windows CE. Please try using freetype fontrendering, bypassing -platform windows:freetype as arguments to the application.
But actually the correct option is -platform windows:fontengine=freetype
that caused me some trouble, so i would like to spare this other people.
The wrong text line is in qtbase\src\plugins\platforms\windows\qplatformfunctions_wince.h