Windows CE: Fix message about freetype font rendering.

Task-number: QTBUG-37976

Change-Id: Ib4bf6ba8f62e2dc4f3860313442fa57c67f06d9a
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>